# yt-automation

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
.claude/memory/: MEMORY.md
prompts/: cooking.md  hot_topics.md  lead.md  motivation.md
src/: cli.py  config.py
src/tools/: stock_video.py  thumbnail.py  tts.py  uploader.py  video_maker.py
templates/: cooking.json  hot_topics.json  motivation.json
tests/: test_tts.py  test_uploader.py  test_video_maker.py
